--- a/index.html
+++ b/index.html
@@ -67,8 +67,8 @@
                 class="form-control-range"
                 id="zoomSlider"
                 min="50"
-                max="500"
-                value="100"
+                max="200"
+                value="80"
               />
               <label id="zoom" for="zoomSlider">Zoom</label>
             </div>
@@ -85,22 +85,15 @@
       </div>
 
       <p id="description" style="margin-bottom: 15px">
-        This is a visualization of the total number of reported COVID 19 cases,
-        recoveries and deaths per country. Data is updated every day. The actual
-        number of cases of COVID 19 may be much higher since testing has been
-        restricted in many places.
+        This visualization shows the growth of the total number of reported
+        COVID 19 cases, recoveries and deaths per country starting from December
+        31, 2019.
       </p>
 
       <div id="chart-area"></div>
       <footer class="footer navbar-fixed-bottom">
-        <p class="text-center mb-0 pb-0">
-          © 2020 by
-          <a href="https://github.com/jgalicic/coronavirusinfo" target="_blank"
-            >Justin Galicic</a
-          >
-        </p>
         <p class="text-center">
-          Source:
+          Sources:
           <a href="https://www.worldometers.info/coronavirus/" target="_blank"
             >worldometers.info/coronavirus</a
           >
