fixed stylings again

--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
           <div id="casesHeading" class="text-center">
             <div class="d-flex justify-content-center numberTotals">
               <h6 id="wwCases" style="color: steelblue; display: inline">
-                Worldwide Cases:
+                Worldwide:
               </h6>
               <h6 style="color: rgb(255, 196, 0); display: inline">
                 Recoveries:
