--- a/index.html
+++ b/index.html
@@ -94,12 +94,13 @@
       <br />
       <br />
 
-      <p id="description" style="margin-bottom: 15px" class="text-center">
+      <p id="description" class="text-center">
         This visualization represents the total number of reported COVID-19
         cases, recoveries and deaths per country.
       </p>
 
       <div id="chart-area"></div>
+
       <footer class="footer navbar-fixed-bottom">
         <p class="text-center">
           Sources:
@@ -112,7 +113,12 @@
             >The World Health Organization</a
           >
         </p>
-        <br />
+        <p class="text-center">
+          Created by
+          <a href="https://github.com/jgalicic" target="_blank"
+            >Justin Galicic</a
+          >
+        </p>
       </footer>
     </div>
 
